--- a/.github/workflows/deploy_doc.yml
+++ b/.github/workflows/deploy_doc.yml
@@ -13,6 +13,12 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
+    - name: Install Java
+      run: sudo apt-get update && sudo apt-get install -y default-jre
+
+    - name: Install PlantUML
+      run: sudo apt-get install -y plantuml
+
     - name: Install Tox
       run: pip install tox
 
