RestSender: Choose target IP address based on execution mode
If Django and Leshan run local and native, send to localhost.

If everything runs dockerized, the django container is the target.

This commit configures the ip address based on a environment variable.

Signed-off-by: Jonas Remmert <jremmert@gmx.net>

--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -23,6 +23,8 @@ services:
       - "5684:5684"     # For LWM2M over DTLS
     networks:
       - mynetwork
+    environment:
+      - DATA_SENDER_URI=http://django:8000
 
 # Define the custom network
 networks:
