doc: automatically generate erd diagram
Before building the documentation, generate an Entity Relationship
Diagram with Django. This generated svg diagram is used in the
subsequent Sphinx build process.

Signed-off-by: Jonas Remmert <jremmert@gmx.net>

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,6 @@ doc/*_doc.log
 
 ext/lib/bin/supl
 ext/lib/bin/libsupl.zip
+
+# Entity Relationship Diagram is a generated file, do not add to version control
+doc/source/images/erd.svg
