--- a/doc/tox.ini
+++ b/doc/tox.ini
@@ -5,13 +5,16 @@ skipsdist = true
 [testenv]
 deps =
     -r requirements.txt
+    -r ../server/django/requirements.txt
 
 [testenv:py3-html]
 commands =
+    python ../server/django/manage.py graph_models sensordata -o source/images/erd.svg
     sphinx-build -E -W --keep-going -b html source build/html
 
 [testenv:py3-pdf]
 commands =
+    python ../server/django/manage.py graph_models sensordata -o source/images/erd.svg
     sphinx-build -M latexpdf source build/pdf
 
 [testenv:py3-linkcheck]
