Squash commit to follow the new structure of CI
Previous commits did not follow the normal
structure of CI, this commit tries to fix that.

Signed-off-by: Jonas Remmert <jremmert@gmx.net>

--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -1,5 +1,6 @@
 Sphinx==7.3.7
-sphinx-rtd-theme==2.0.0
+sphinx-book-theme==1.1.2
 plantuml==0.3.0
 sphinxcontrib-plantuml
+sphinx-autobuild
 codespell
