--- a/.github/workflows/compliance.yml
+++ b/.github/workflows/compliance.yml
@@ -24,3 +24,26 @@ jobs:
             export ZEPHYR_BASE=$PWD
             git fetch origin $BASE_REF
             tox -c utils/ci/tox.ini -e compliance -- -c origin/$BASE_REF..
+
+      - name: Set up Java
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+
+      - name: Download Checkstyle configuration
+        run: curl -LJO https://raw.githubusercontent.com/checkstyle/checkstyle/master/src/main/resources/google_checks.xml
+
+      - name: Install Checkstyle
+        run: |
+          curl -LJO https://github.com/checkstyle/checkstyle/releases/download/checkstyle-9.3/checkstyle-9.3-all.jar
+          alias checkstyle="java -jar $(pwd)/checkstyle-9.3-all.jar"
+
+      - name: Run Checkstyle
+        run: |
+          checkstyle -c google_checks.xml server/leshan/src/main/java/lwm2m
+
+      - name: Install Codespell
+        run: pip install codespell
+
+      - name: Run Codespell
+        run: codespell
