Add java distribution "temurin"
Minor update to compliance.yml file

Signed-off-by: Akarshan Kapoor <data.akarshan@icloud.com>

--- a/.github/workflows/compliance.yml
+++ b/.github/workflows/compliance.yml
@@ -29,6 +29,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '11'
+          distribution: 'temurin'
 
       - name: Download Checkstyle configuration
         run: curl -LJO https://raw.githubusercontent.com/checkstyle/checkstyle/master/src/main/resources/google_checks.xml
