--- a/.github/workflows/compliance.yml
+++ b/.github/workflows/compliance.yml
@@ -43,4 +43,4 @@ jobs:
         run: pip install codespell
 
       - name: Run Codespell
-        run: codespell
+        run: codespell --quiet-level=2
