zephyr: lwm2m_client: Add support for cbor datatypes
Signed-off-by: Jonas Remmert <jremmert@gmx.net>

--- a/fw_test/lwm2m_client/prj.conf
+++ b/fw_test/lwm2m_client/prj.conf
@@ -39,3 +39,14 @@ CONFIG_NET_CONFIG_MY_IPV4_GW="192.0.2.2"
 # Longer endpoint name might be returned in a registration reply
 CONFIG_COAP_EXTENDED_OPTIONS_LEN=y
 CONFIG_COAP_EXTENDED_OPTIONS_LEN_VALUE=40
+
+# Data format and LwM2M Version
+CONFIG_LWM2M_VERSION_1_1=y
+
+# SenML CBOR - default
+CONFIG_ZCBOR=y
+CONFIG_LWM2M_RW_CBOR_SUPPORT=y
+CONFIG_LWM2M_RW_SENML_CBOR_SUPPORT=y
+CONFIG_LWM2M_RW_JSON_SUPPORT=y
+CONFIG_LWM2M_RW_SENML_JSON_SUPPORT=y
+CONFIG_ZCBOR_CANONICAL=y
