--- a/server/leshan/pom.xml
+++ b/server/leshan/pom.xml
@@ -22,6 +22,12 @@
             <artifactId>leshan-server-cf</artifactId>
             <version>2.0.0-M14</version>
         </dependency>
+        <!-- Logback dependencies for logging -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.5.6</version>
+        </dependency>
         <!-- SLF4J Simple binding for logging at runtime -->
         <dependency>
             <groupId>org.slf4j</groupId>
