doc: automate ReST API documentation
The django extension drf_spectacular allows to generate OpenAPI schema.
Via redoc, this schema can be rendered into a detailed html api
documentation. This api documentation is referenced by Sphinx to be
available on the GitHub pages documentation.

Signed-off-by: Jonas Remmert <jremmert@gmx.net>

--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -2,6 +2,8 @@ Sphinx==7.3.7
 sphinx-book-theme==1.1.2
 plantuml==0.3.0
 sphinxcontrib-plantuml
+sphinxcontrib-httpdomain
+sphinxcontrib-redoc
 sphinx-autobuild
 codespell
 tox
