--- a/doc/tox.ini
+++ b/doc/tox.ini
@@ -10,6 +10,7 @@ deps =
 [testenv:py3-html]
 commands =
     python ../server/django/manage.py graph_models sensordata -o source/images/erd.svg
+    python ../server/django/manage.py generate_openapi -o build/generated/openapi-schema.yaml
     sphinx-build -E -W --keep-going -b html source build/html
 
 [testenv:py3-pdf]
