--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,5 +1,6 @@
 services:
   django:
+    stop_grace_period: 1s
     build:
       context: ./django
       dockerfile: Dockerfile.django
@@ -23,6 +24,7 @@ services:
       - "6379:6379"
 
   leshan:
+    stop_grace_period: 1s
     build:
       context: ./leshan
       dockerfile: Dockerfile.leshan
