--- a/doc/tox.ini
+++ b/doc/tox.ini
@@ -14,9 +14,15 @@ commands =
     sphinx-build -E -W --keep-going -b html source build/html
 
 [testenv:py3-pdf]
+allowlist_externals =
+    /bin/sh
 commands =
     python ../server/django/manage.py graph_models sensordata -o source/images/erd.svg
+    /bin/sh -c 'rm -rf build/pdf/latex/*'
     sphinx-build -M latexpdf source build/pdf
+    # Copy the pdf to the static directory so it can be served by the web server
+    /bin/sh -c 'mkdir -p build/html/_static/'
+    /bin/sh -c 'cp build/pdf/latex/*.pdf build/html/_static/FlowNexus.pdf'
 
 [testenv:py3-linkcheck]
 commands =
