--- a/simulation/lwm2m_client/prj.conf
+++ b/simulation/lwm2m_client/prj.conf
@@ -5,7 +5,7 @@ CONFIG_LWM2M_LOG_LEVEL_DBG=y
 CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_NET_IPV6=y
 CONFIG_NET_IF_UNICAST_IPV6_ADDR_COUNT=3
-CONFIG_NET_IF_MCAST_IPV6_ADDR_COUNT=2
+CONFIG_NET_IF_MCAST_IPV6_ADDR_COUNT=3
 CONFIG_NET_IPV4=y
 CONFIG_NET_DHCPV4=n
 CONFIG_NET_IF_UNICAST_IPV4_ADDR_COUNT=3
@@ -30,6 +30,8 @@ CONFIG_LWM2M_IPSO_TEMP_SENSOR=y
 CONFIG_LWM2M_IPSO_LIGHT_CONTROL=y
 CONFIG_LWM2M_IPSO_TIMER=y
 CONFIG_LWM2M_SHELL=y
+CONFIG_NET_SHELL=y
+CONFIG_SHELL=y
 
 CONFIG_NET_CONFIG_MY_IPV6_ADDR="2001:db8::1"
 CONFIG_NET_CONFIG_PEER_IPV6_ADDR="2001:db8::2"
