--- a/simulation/lwm2m_client/Kconfig
+++ b/simulation/lwm2m_client/Kconfig
@@ -29,7 +29,7 @@ endif
 
 config LWM2M_APP_SERVER
 	string "LwM2M server address"
-	default "coap://192.0.2.2:5683" if !LWM2M_DTLS_SUPPORT
+	default "coap://flownexus.org:5683" if !LWM2M_DTLS_SUPPORT
 	default "coaps://192.0.2.2:5684" if (LWM2M_DTLS_SUPPORT && !LWM2M_RD_CLIENT_SUPPORT_BOOTSTRAP)
 	default "coaps://192.0.2.2:5784" if (LWM2M_DTLS_SUPPORT && LWM2M_RD_CLIENT_SUPPORT_BOOTSTRAP)
 	help
