west: import all modules from zephyr
Some modules have been missing when I tested several things. The easiest
way is to just import all modules. The download time is reasonable, so
there are no major disadvantages.

Signed-off-by: Jonas Remmert <j.remmert@phytec.de>

--- a/west.yml
+++ b/west.yml
@@ -19,35 +19,4 @@ manifest:
       remote: zephyrproject-rtos
       repo-path: zephyr
       revision: main
-      import:
-        name-allowlist:
-          - TraceRecorderSource
-          - canopennode
-          - chre
-          - cmsis
-          - cmsis-dsp
-          - cmsis-nn
-          - edtt
-          - fatfs
-          - hal_nordic
-          - hal_st # required for ST sensors (unrelated to STM32 MCUs)
-          - hal_wurthelektronik
-          - liblc3
-          - libmetal
-          - littlefs
-          - loramac-node
-          - lvgl
-          - lz4
-          - mipi-sys-t
-          - nanopb
-          - net-tools
-          - nrf_hw_models
-          - open-amp
-          - picolibc
-          - psa-arch-tests
-          - segger
-          - tinycrypt
-          - tf-m-tests
-          - uoscore-uedhoc
-          - zcbor
-          - zscilib
+      import: true
