simulate: DL_SERVER: Add new KConfig symbol for DL Server URL
The download server for OTA updates could be different from the regular
server. The ota update does not send a complete URL, but only a path.
The host of the url is fixed in firmware.

This is a security feature to make sure the clients can never download
firmware from another than the specified server domain.

Signed-off-by: Jonas Remmert <j.remmert@phytec.de>

--- a/simulation/lwm2m_client/Kconfig
+++ b/simulation/lwm2m_client/Kconfig
@@ -27,6 +27,12 @@ config LWM2M_APP_TLS_TAG
 	  TLS security tag to use when connecting.
 endif
 
+
+config DL_SERVER_HOSTNAME
+    string "Hostname of http download server. This is a security feature to \\
+            prevent downloading firmware from other sources."
+    default "https://flownexus.org"
+
 config LWM2M_APP_SERVER
 	string "LwM2M server address"
 	default "coap://flownexus.org:5683" if !LWM2M_DTLS_SUPPORT
