simulation: lwm2m_client: revise sample
- Add support for TLS Encryption (via Let's Enrypt Root CA)
   - Server has to support TLS_RSA_WITH_AES_128_GCM_SHA256
   - Future versions will move to self-signed certificates
- Add support for WIFI (if client supports)
- Implement http Download client
- Move to lwm2m update client functions (instead of registering lwm2m
  paths)

Signed-off-by: Jonas Remmert <j.remmert@phytec.de>

--- a/simulation/lwm2m_client/Kconfig
+++ b/simulation/lwm2m_client/Kconfig
@@ -27,6 +27,21 @@ config LWM2M_APP_TLS_TAG
 	  TLS security tag to use when connecting.
 endif
 
+if WIFI
+config WIFI_SSID
+	string "WiFi SSID"
+	#default "my_wifi"
+	default "FRITZ!Box 3490"
+	help
+	  WiFi SSID to connect to.
+
+config WIFI_PSK
+	string "WiFi PSK"
+	#default "my_password"
+	default "!linksys!"
+	help
+	  WiFi PSK to use.
+endif
 
 config DL_SERVER_HOSTNAME
     string "Hostname of http download server. This is a security feature to \\
