--- a/simulation/lwm2m_client/prj.conf
+++ b/simulation/lwm2m_client/prj.conf
@@ -1,7 +1,6 @@
 CONFIG_NETWORKING=y
-CONFIG_LOG=y
+CONFIG_NET_CONNECTION_MANAGER=y
 CONFIG_GPIO=y
-CONFIG_LWM2M_LOG_LEVEL_DBG=y
 CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_NET_IPV6=y
 CONFIG_NET_IF_UNICAST_IPV6_ADDR_COUNT=3
@@ -11,13 +10,30 @@ CONFIG_NET_DHCPV4=n
 CONFIG_NET_IF_UNICAST_IPV4_ADDR_COUNT=3
 CONFIG_NET_IF_MCAST_IPV4_ADDR_COUNT=2
 CONFIG_PRINTK=y
+CONFIG_NET_SOCKETS=y
+CONFIG_NET_TCP=y
+CONFIG_POSIX_API=y
 CONFIG_NET_PKT_RX_COUNT=10
 CONFIG_NET_PKT_TX_COUNT=10
 CONFIG_NET_BUF_RX_COUNT=10
 CONFIG_NET_BUF_TX_COUNT=10
 CONFIG_NET_MAX_CONTEXTS=5
 
+CONFIG_DNS_RESOLVER=y
+CONFIG_DNS_SERVER_IP_ADDRESSES=y
+CONFIG_DNS_SERVER1="192.0.2.2"
+CONFIG_DNS_SERVER2="8.8.8.8"
+CONFIG_LWM2M_DNS_SUPPORT=y
+CONFIG_NET_CONFIG_MY_IPV4_GW="192.0.2.2"
+
+CONFIG_REQUIRES_FULL_LIBC=y
+CONFIG_MAIN_STACK_SIZE=4096
+CONFIG_NET_BUF_DATA_SIZE=1500
+
+# Logging
 CONFIG_NET_LOG=y
+CONFIG_LOG=y
+CONFIG_LWM2M_LOG_LEVEL_INF=y
 
 CONFIG_NET_CONFIG_NEED_IPV6=y
 CONFIG_NET_CONFIG_NEED_IPV4=y
@@ -27,6 +43,7 @@ CONFIG_LWM2M=y
 CONFIG_LWM2M_COAP_BLOCK_SIZE=512
 CONFIG_LWM2M_IPSO_SUPPORT=y
 CONFIG_LWM2M_IPSO_TEMP_SENSOR=y
+CONFIG_LWM2M_IPSO_HUMIDITY_SENSOR=y
 CONFIG_LWM2M_IPSO_LIGHT_CONTROL=y
 CONFIG_LWM2M_IPSO_TIMER=y
 CONFIG_LWM2M_SHELL=y
@@ -41,6 +58,10 @@ CONFIG_NET_CONFIG_MY_IPV4_GW="192.0.2.2"
 CONFIG_DL_SERVER_HOSTNAME="https://flownexus.org"
 #CONFIG_DL_SERVER_HOSTNAME="http://192.0.2.2"
 
+CONFIG_LWM2M_APP_SERVER="coap://flownexus.org:5683"
+#CONFIG_LWM2M_APP_SERVER="coap://192.0.2.2:5683"
+#CONFIG_LWM2M_APP_SERVER="coap://192.168.178.88:5683"
+
 # Longer endpoint name might be returned in a registration reply
 CONFIG_COAP_EXTENDED_OPTIONS_LEN=y
 CONFIG_COAP_EXTENDED_OPTIONS_LEN_VALUE=40
@@ -52,6 +73,6 @@ CONFIG_LWM2M_VERSION_1_1=y
 CONFIG_ZCBOR=y
 CONFIG_LWM2M_RW_CBOR_SUPPORT=y
 CONFIG_LWM2M_RW_SENML_CBOR_SUPPORT=y
-CONFIG_LWM2M_RW_JSON_SUPPORT=y
-CONFIG_LWM2M_RW_SENML_JSON_SUPPORT=y
+CONFIG_LWM2M_RW_JSON_SUPPORT=n
+CONFIG_LWM2M_RW_SENML_JSON_SUPPORT=n
 CONFIG_ZCBOR_CANONICAL=y
