--- a/simulation/lwm2m_client/boards/qemu_cortex_m3.conf
+++ b/simulation/lwm2m_client/boards/qemu_cortex_m3.conf
@@ -2,3 +2,10 @@ CONFIG_NET_L2_ETHERNET=y
 CONFIG_ETH_DRIVER=y
 CONFIG_ETH_STELLARIS=y
 CONFIG_NET_QEMU_ETHERNET=y
+
+CONFIG_DNS_RESOLVER=y
+CONFIG_DNS_SERVER_IP_ADDRESSES=y
+#CONFIG_DNS_SERVER1="192.0.2.2"
+CONFIG_DNS_SERVER2="8.8.8.8"
+CONFIG_LWM2M_DNS_SUPPORT=y
+CONFIG_NET_CONFIG_MY_IPV4_GW="192.0.2.2"
