--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     volumes:
       - ./django:/django
       - ./logs:/django/logs
+      - /var/www/:/var/www/
     ports:
       - "8000:8000"
     networks:
