--- a/server/django/requirements.txt
+++ b/server/django/requirements.txt
@@ -5,6 +5,7 @@ djangorestframework==3.15.2
 whitenoise==6.7.0
 celery[redis]==5.4.0
 gevent==24.2.1
+numpy==2.1.1
 python-dateutil==2.9.0
 
 # Generation of Entity-Relationship Diagrams
