docker-compose: restart redis automatically
Signed-off-by: Jonas Remmert <j.remmert@phytec.de>

--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -23,6 +23,8 @@ services:
       - mynetwork
     ports:
       - "6379:6379"
+    # Restart the container unless it is explicitly stopped
+    restart: unless-stopped
 
   leshan:
     stop_grace_period: 1s
