redis: add logging to redis
Redis showed some instabilities, this commit adds logging to the common
logging files. In addition it sets the memory usage to max 20 MB and
disables persistence.

Signed-off-by: Jonas Remmert <jremmert@gmx.net>

--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -18,7 +18,13 @@ services:
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
 
   redis:
-    image: redis:7.4-alpine
+    stop_grace_period: 1s
+    build:
+      context: ./redis
+      dockerfile: Dockerfile.redis
+    volumes:
+      - ./redis:/redis
+      - ./logs:/redis/logs
     networks:
       - mynetwork
     ports:
