doc: tox: clean html dir before build
Signed-off-by: Jonas Remmert <jremmert@gmx.net>

--- a/doc/tox.ini
+++ b/doc/tox.ini
@@ -8,7 +8,10 @@ deps =
     -r ../server/django/requirements.txt
 
 [testenv:py3-html]
+allowlist_externals =
+    /bin/sh
 commands =
+    /bin/sh -c 'rm -rf build/html/*'
     python ../server/django/manage.py graph_models sensordata -o source/images/erd.svg
     python ../server/django/manage.py generate_openapi -o build/generated/openapi-schema.yaml
     sphinx-build -E -W --keep-going -b html source build/html
