--- a/server/leshan/pom.xml
+++ b/server/leshan/pom.xml
@@ -63,6 +63,11 @@
             <version>6.1.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.17.2</version>
+        </dependency>
     </dependencies>
 
     <build>
