simulation: add time series test object to lwm2m client
Signed-off-by: Jonas Remmert <jremmert@gmx.net>

--- a/simulation/lwm2m_client/prj.conf
+++ b/simulation/lwm2m_client/prj.conf
@@ -76,3 +76,11 @@ CONFIG_LWM2M_RW_SENML_CBOR_SUPPORT=y
 CONFIG_LWM2M_RW_JSON_SUPPORT=n
 CONFIG_LWM2M_RW_SENML_JSON_SUPPORT=n
 CONFIG_ZCBOR_CANONICAL=y
+ # Time series support
+CONFIG_LWM2M_RW_SENML_CBOR_SUPPORT=y
+CONFIG_LWM2M_RW_SENML_CBOR_RECORDS=100
+CONFIG_LWM2M_RESOURCE_DATA_CACHE_SUPPORT=y
+CONFIG_LWM2M_COAP_BLOCK_TRANSFER=y
+CONFIG_LWM2M_COAP_ENCODE_BUFFER_SIZE=4096
+CONFIG_POSIX_CLOCK=y
+CONFIG_RING_BUFFER=y
